--- a/.htaccess
+++ b/.htaccess
@@ -3,4 +3,5 @@ RewriteEngine On
 rewritecond %{REQUEST_FILENAME} !=d
 rewritecond %{REQUEST_FILENAME} !=f
 rewritecond %{REQUEST_FILENAME} !=l
+RewriteCond %{REQUEST_URI} !\.(css|gif|ico|jpg|js|png|swf|txt)$
 RewriteRule ^(.*)$ index.php?url=$1 [L,QSA]
